kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-apps
  labels:
    name: devsecops-apps
