kubernetes/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devsecops-apps
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: backend
